fix for pipelineController.yaml path to unit_test.groovy

--- a/pipelineController.yaml
+++ b/pipelineController.yaml
@@ -3,4 +3,4 @@ repositoryTasks:
     phrase:
     change:
       - changedFilesRegex: '.*'
-        script: .cicd/unit_test.groovy
+        script: jenkins/unit_test.groovy
