--- a/pipelineController.yaml
+++ b/pipelineController.yaml
@@ -3,9 +3,13 @@
 repositoryTasks:
   pr:
     phrase:
+      - phraseRegex: '.*publish to pypi.*'
+        script:
+          - taskName: BuildAndPublishPyPi
+            definition: jenkins/build_and_publish_pypi.groovy
       - phraseRegex: '.*publish to testpypi.*'
         script:
-          - taskName: BuildAndPublish
+          - taskName: BuildAndPublishTestPyPi
             definition: jenkins/build_and_publish_testpypi.groovy
             environment:
               PUBLISH_REPO_URL: https://test.pypi.org/legacy/
