--- a/.harness/dummytestpipeline.yaml
+++ b/.harness/dummytestpipeline.yaml
@@ -35,10 +35,12 @@ pipeline:
                       identifier: run_unit_tests
                       spec:
                         connectorRef: account.dockerhub_datarobot_read
-                        image: python:3.9
+                        image: python:3.8
                         shell: Bash
                         command: |2-
                                           set -exuo pipefail
+                                          virtualenv .venv -p python3.8
+                                          source .venv/bin/activate
                                           pip install apache-airflow==2.5.1
                                           pip install -r requirements.txt
                                           pip install airflow-provider-datarobot
