Update pipeline dummy-test-pipeline

--- a/.harness/dummytestpipeline.yaml
+++ b/.harness/dummytestpipeline.yaml
@@ -45,6 +45,7 @@ pipeline:
                                           pip install apache-airflow==2.5.1
                                           pip install -r requirements.txt
                                           pip install airflow-provider-datarobot
+                                          pip install pendulum~=2.0.0
                                           airflow db init
                                           airflow db check
                                           pytest tests/unit
