Update pipeline dummy-test-pipeline

--- a/.harness/dummytestpipeline.yaml
+++ b/.harness/dummytestpipeline.yaml
@@ -39,10 +39,9 @@ pipeline:
                         shell: Bash
                         command: |2-
                                           set -exuo pipefail
-                                          pip install apache-airflow==2.5.1
+                                          pip install apache-airflow
                                           pip install -r requirements.txt
                                           pip install airflow-provider-datarobot
-                                          pip install pendulum~=2.0.0
                                           airflow db init
                                           airflow db check
                                           pytest tests/unit
