--- a/.harness/dummytestpipeline.yaml
+++ b/.harness/dummytestpipeline.yaml
@@ -44,4 +44,9 @@ pipeline:
                                           pip install airflow-provider-datarobot
                                           airflow db init
                                           airflow db check
-                                          pytest tests/unit
+                                          pytest -vv tests/unit/ --junit-xml=unit_test_report.xml
+                        reports:
+                          type: JUnit
+                          spec:
+                            paths:
+                              - tests/unit/unit_test_report.xml
