Update pipeline black-pylint-on-PR

--- a/.harness/black-pylint-on-PR.yaml
+++ b/.harness/black-pylint-on-PR.yaml
@@ -33,6 +33,7 @@ pipeline:
                           set -exuo pipefail
                           pip install -U pip
                           pip install -r requirements.txt
+                          pip install pylint
                           make lint check-licenses
               infrastructure:
                 type: KubernetesDirect
