--- a/.harness/dummytestpipeline.yaml
+++ b/.harness/dummytestpipeline.yaml
@@ -13,6 +13,37 @@ pipeline:
   stages:
     - parallel:
         - stage:
+            name: lint
+            identifier: lint
+            description: ""
+            type: CI
+            spec:
+              infrastructure:
+                type: KubernetesDirect
+                spec:
+                  connectorRef: account.cigeneral
+                  namespace: harness-delegate-ng
+                  automountServiceAccountToken: true
+                  nodeSelector: {}
+                  os: Linux
+              cloneCodebase: true
+              execution:
+                steps:
+                  - step:
+                      type: Run
+                      name: lint check step
+                      identifier: run_lint_check
+                      spec:
+                        connectorRef: account.dockerhub_datarobot_read
+                        image: python:3.9
+                        shell: Bash
+                        command: |-
+                          set -exuo pipefail
+                          pip install -U pip
+                          pip install -r requirements.txt
+                          pip install pylint
+                          make lint
+        - stage:
             name: test_unit
             identifier: test_unit
             description: ""
