--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -55,6 +55,7 @@ pipeline:
                           set -exuo pipefail
                           echo "Building wheel..."
                           python -m build --no-isolation
+                          echo "Building wheel...OK"
                   - step:
                       type: Run
                       name: publish pip step
@@ -65,5 +66,4 @@ pipeline:
                         shell: Bash
                         command: |-
                           set -exuo pipefail
-                          echo "Building wheel..."
-                          python -m build --no-isolation
+                          echo "Publishing wheel to pip..."
