Update pipeline build-and-publish-pip-early-access

--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -57,3 +57,5 @@ pipeline:
                         command: |-
                           set -exuo pipefail
                           echo "Publishing wheel to pip..."
+                    envVariables:
+                      PYPI_TOKEN: <+secrets.getValue("test-secret")>
