--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -52,6 +52,9 @@ pipeline:
                       name: publish pip step
                       identifier: Run_Publish
                       spec:
+                        envVariables:
+                          PYPI_TOKEN: <+secrets.getValue("test-secret")>
+                          PYPI_TOKEN2: test-variable
                         connectorRef: account.dockerhub_datarobot_read
                         image: python:3.9
                         shell: Bash
@@ -61,5 +64,3 @@ pipeline:
                           echo $(ls)
                           echo "$PYPI_TOKEN"
                           echo "Publishing to PyPi (${env.PYPI_TOKEN})..."
-                    envVariables:
-                      PYPI_TOKEN: <+secrets.getValue("test-secret")>
