Update pipeline build-and-publish-pip-early-access

--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -61,5 +61,5 @@ pipeline:
                         command: |-
                           set -exuo pipefail
                           echo "Publishing wheel to pip..."
-                          echo $(ls)
+                          echo $(ls dist)
                           echo "$PYPI_TOKEN"
