Update pipeline build-and-publish-pip-early-access

--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -53,7 +53,7 @@ pipeline:
                       identifier: Run_Publish
                       spec:
                         envVariables:
-                          PYPI_TOKEN: <+secrets.getValue("test-secret")>
+                          PYPI_TOKEN: <+secrets.getValue("pypi-airflow-provider-datarobot-early-access")>
                         connectorRef: account.dockerhub_datarobot_read
                         image: python:3.9
                         shell: Bash
