Update pipeline build-and-publish-pip-early-access

--- a/build_publish_early_access.yaml
+++ b/build_publish_early_access.yaml
@@ -66,5 +66,6 @@ pipeline:
                             --username "__token__" \
                             --password "$PYPI_TOKEN" \
                             --non-interactive \
+                            --verbose \
                             --disable-progress-bar
                           echo "Finished successfully!"
