Add myself to CODEOWNERS.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*       @elatt @oleksandr-saienko @dulcardo @alexromanyuk
+*       @elatt @oleksandr-saienko @dulcardo @alexromanyuk @andrius-senulis
