--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-/                                                        @datarobot/machine-learning-development
+*                                                        @datarobot/machine-learning-development
 /.harness                                                @datarobot/continuous-integration
 /datarobot_provider                                      @datarobot/machine-learning-development
 /datarobot_provider/operators/ai_catalog.py              @datarobot/mldata
