[MLDEV-1124] Update codeowners to have a more domain-oriented review process (#100)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,12 @@
-*       @elatt @alexromanyuk @andrius-senulis
+*                                                        @datarobot/machine-learning-development
+/datarobot_provider/operators/ai_catalog.py              @datarobot/mldata
+/datarobot_provider/operators/connections.py             @datarobot/mldata
+/datarobot_provider/operators/feature_discovery.py       @datarobot/mldata
+/datarobot_provider/operators/mlops.py                   @datarobot/model-management
+/datarobot_provider/operators/model_insights.py          @datarobot/trust-explainable-ai
+/datarobot_provider/operators/model_package.py           @datarobot/model-management
+/datarobot_provider/operators/model_predictions.py       @datarobot/predictions
+/datarobot_provider/operators/monitoring.py              @datarobot/model-management
+/datarobot_provider/operators/monitoring_job.py          @datarobot/tracking-agent
+/datarobot_provider/operators/prediction_explanations.py @datarobot/trust-explainable-ai
+/tests/                                                  @datarobot/machine-learning-development
