--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -29,20 +29,33 @@ pipeline:
               cloneCodebase: true
               execution:
                 steps:
-                  - step:
-                      type: Run
-                      name: lint check step
-                      identifier: run_lint
-                      spec:
-                        connectorRef: account.dockerhub_datarobot_read
-                        image: python:3.9
-                        shell: Bash
-                        command: |-
-                          set -exuo pipefail
-                          pip install -U pip
-                          pip install -r requirements.txt
-                          pip install pylint
-                          make lint
+                  - parallel:
+                    - step:
+                        type: Run
+                        name: lint check step
+                        identifier: run_lint
+                        spec:
+                          connectorRef: account.dockerhub_datarobot_read
+                          image: python:3.9
+                          shell: Bash
+                          command: |-
+                            set -exuo pipefail
+                            pip install -U pip
+                            pip install -r requirements.txt
+                            make lint
+                    - step:
+                        type: Run
+                        name: format check step
+                        identifier: format_lint
+                        spec:
+                          connectorRef: account.dockerhub_datarobot_read
+                          image: python:3.9
+                          shell: Bash
+                          command: |-
+                            set -exuo pipefail
+                            pip install -U pip
+                            pip install -r requirements.txt
+                            make format-no-fix
         - stage:
             name: test_unit
             identifier: test_unit
