--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,12 @@ repos:
             "--python-folders",
             "worker/worker,web/web,engine/engine,worker/tests,web/tests,engine/tests,api_tests/api_tests"
         ]
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.9.2
+    hooks:
+        # Run the linter.
+    -   id: ruff
+        args: [ --fix ]
+        # Run the formatter.
+    -   id: ruff-format
