--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 apache-airflow>=2.3.0
-black>=22.12.0
 datarobot>=3.3.1
-flake8>=4.0.1
-isort>=5.11.4
 mypy>=0.931
 pytest>=7.0.0
 pytest-mock>=3.7.0
 pytest-helpers-namespace>=2021.12.29
 pre-commit>=4.0.1
+ruff>=0.9.2
