--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.ruff]
 # General settings
 line-length = 100
-target-version = "py37"
+target-version = "py39"
 
 # Extend default excludes (based on Flake8 configuration)
 exclude = [
@@ -28,6 +28,10 @@ ignore = [
     "B018",  # Found useless expression. Either assign it to a variable or remove it.
     "C901",  # Method is too complex
 ]
+
+[tool.ruff.isort]
+force-single-line = true
+filter_files = true
 
 [tool.ruff.format]
 quote-style = "double"
