--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -41,7 +41,7 @@ pipeline:
                           command: |-
                             set -exuo pipefail
                             pip install -U pip
-                            pip install -r requirements.txt
+                            make req-dev
                             make lint
                     - step:
                         type: Run
@@ -54,7 +54,7 @@ pipeline:
                           command: |-
                             set -exuo pipefail
                             pip install -U pip
-                            pip install -r requirements.txt
+                            make req-dev
                             make format-no-fix
         - stage:
             name: test_unit
@@ -83,8 +83,7 @@ pipeline:
                         shell: Bash
                         command: |-
                           set -exuo pipefail
-                          pip install apache-airflow
-                          pip install -r requirements.txt
+                          make req-dev
                           pip install airflow-provider-datarobot
                           airflow db init
                           airflow db check
