--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,52 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "airflow-provider-datarobot"
+version = "0.0.10"
+description = "DataRobot Airflow provider."
+readme = "README.md"
+requires-python = "~=3.11"
+license = {text = "DataRobot Tool and Utility Agreement"}
+authors = [
+   {name = "DataRobot", email = "support@datarobot.com"}
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "License :: Other/Proprietary License",
+]
+dependencies = [
+    "apache-airflow>=2.3.0",
+    "datarobot>=3.3.1"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=4.0.1",
+    "ruff>=0.9.2",
+    "mypy>=0.931",
+    "pytest>=7.0.0",
+    "pytest-mock>=3.7.0",
+    "pytest-helpers-namespace>=2021.12.29",
+    "Sphinx>=8.1.3",
+    "sphinx_rtd_theme>=3.0",
+    "numpydoc>=1.7.0,<1.8.0",
+    "sphinx-autodoc-typehints>=2",
+    "pyenchant==3.2.2",
+    "sphinx-copybutton",
+    "sphinx-markdown-builder",
+    "myst-parser==4.0.0",
+]
+
+[project.entry-points."apache_airflow_provider"]
+provider_info = "datarobot_provider.__init__:get_provider_info"
+
 [tool.ruff]
 # General settings
 line-length = 100
-target-version = "py39"
+target-version = "py311"
 
 # Extend default excludes (based on Flake8 configuration)
 exclude = [
