--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -43,6 +43,7 @@ pipeline:
                             pip install -U pip
                             pip install -r requirements.txt
                             make lint
+                            make typecheck
                     - step:
                         type: Run
                         name: format check step
