--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -13,7 +13,7 @@ pipeline:
   stages:
     - parallel:
         - stage:
-            name: lint
+            name: Lint and MyPy
             identifier: lint
             description: ""
             type: CI
@@ -56,8 +56,21 @@ pipeline:
                             pip install -U pip
                             pip install -r requirements.txt
                             make format-no-fix
+                    - step:
+                        type: Run
+                        name: mypy check step
+                        identifier: mypy
+                        spec:
+                          connectorRef: account.dockerhub_datarobot_read
+                          image: python:3.9
+                          shell: Bash
+                          command: |-
+                            set -exuo pipefail
+                            pip install -U pip
+                            pip install -r requirements.txt
+                            make format-no-fix
         - stage:
-            name: test_unit
+            name: Unit tests
             identifier: test_unit
             description: ""
             type: CI
