--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,12 @@ force-single-line = true
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.mypy]
+python_version = 3.9
+ignore_missing_imports = true
+follow_imports_for_stubs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+show_error_codes = true
+pretty = true
