--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -36,7 +36,7 @@ pipeline:
                           identifier: run_lint
                           spec:
                             connectorRef: account.dockerhub_datarobot_read
-                            image: python:3.12-alpine
+                            image: python:3.12
                             shell: Bash
                             command: |-
                               set -exuo pipefail
@@ -49,7 +49,7 @@ pipeline:
                           identifier: format_lint
                           spec:
                             connectorRef: account.dockerhub_datarobot_read
-                            image: python:3.12-alpine
+                            image: python:3.12
                             shell: Bash
                             command: |-
                               set -exuo pipefail
@@ -79,7 +79,7 @@ pipeline:
                       identifier: run_unit_tests
                       spec:
                         connectorRef: account.dockerhub_datarobot_read
-                        image: python:<+matrix.python_version>-alpine
+                        image: python:<+matrix.python_version>
                         shell: Bash
                         command: |-
                           set -exuo pipefail
