--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -101,4 +101,4 @@ pipeline:
                             - "3.10"
                             - "3.11"
                             - "3.12"
-                          nodeName: python <+matrix.python_version>
+                          nodeName: <+matrix.python_version>
