Update pipeline ci-checks

--- a/.harness/cichecks.yaml
+++ b/.harness/cichecks.yaml
@@ -101,5 +101,5 @@ pipeline:
                             - "3.10"
                             - "3.11"
                             - "3.12"
-                            - "3.13"
+                            - 3.13-slim
                           nodeName: <+matrix.python_version>
